added export table as image feature

--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,12 @@ body {
 
 .host-row {
   color: #1890ff;
-  border: 1px solid black;
 }
 
 .ant-table table {
   font-size: 12px;
+}
+
+.export {
+  overflow: visible;
 }
